# prog-lang-usability

./: README.md  TODO.md  book.toml
.github/workflows/: mdbook.yml
src/: SUMMARY.md  anyhow.md  argfeat.cr  argfeat.md  argfeat.py  argfeat.rs  asm.cr  asm.md  asm.py  asm.rs  async.cr  async.md  async.py  byref.cr  byref.rs  calllibc.cr  calllibc.md  calllibc.py  calllibc.rs  chaining.md  chaining1.cr  chaining1.py  chaining1.rs  chaining2.cr  chaining2.py  chaining2.rs  cmd.md  cmd.py  cmd.rs  cmd1.cr  cmd2.cr  context.cr  context.md  context.rs  context1.py  context2.py  dbgprint.cr  dbgprint.md  dbgprint.py  dbgprint.rs  (+104 more)
src/anyhow_demo/: Cargo.toml
src/anyhow_demo/src/: config.rs  launcher.rs  main.rs  setup.rs
src/async_rs/: Cargo.toml
src/async_rs/src/: main.rs
src/chaining3_rs/: Cargo.toml
src/chaining3_rs/src/: main.rs
src/dborm_cr/: README.md  shard.yml
src/dborm_cr/src/: dborm.cr  micrate.cr
src/dborm_py/: alembic.ini  pyproject.toml
src/dborm_py/db/versions/: 8d532875796c_.py
src/dborm_py/dborm/: __main__.py
src/dborm_rs/: Cargo.toml
src/dborm_rs/src/: main.rs  models.rs  schema.rs
src/httpsrv_cr/: shard.yml
src/httpsrv_cr/src/: httpsrv.cr
src/httpsrv_py/: pyproject.toml
src/httpsrv_py/httpsrv/: __main__.py
src/httpsrv_rs/: Cargo.toml
src/prome_py/: pyproject.toml
src/prome_py/prome/: __main__.py
src/regex_rs/: Cargo.toml
src/serdes_rs/: Cargo.toml
src/syscall_rs/: Cargo.toml
src/thiserror_demo/: Cargo.toml
src/thre_rs/: Cargo.toml
src/tokio_demo/: Cargo.toml
theme/: head.hbs  highlight.js  index.hbs
(+13 files in other folders)
