[tool.poetry]
name = "orm-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dborm"}]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0.19"
psycopg2 = "^2.9.6"
alembic = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
