[tool.poetry]
name = "httpsrv"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "httpsrv"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
