[tool.poetry]
name = "prome-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "prome"}]

[tool.poetry.dependencies]
python = "^3.8"
prometheus-client = "^0.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
